--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<title>Pablo Correa</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" href="http://www.example.com/myicon.ico"/>
-		<link rel="stylesheet" href="images/buzz.png" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
