update about me and site description

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Pablo's Portfolio</h1>
-						<p>A collection of past projects which display my abilities.</p>
+						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Feel free to
+							reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below. .</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -54,7 +55,8 @@
 								<header class="major">
 									<span class="date">Pablo Correa</span>
 									<h2>About Me</a></h2>
-									<p>Computer Science 3rd year at the Georgia Institute of Technology<br />
+									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
+										Currently working for the Business Services Layer at <a href="https://www.ncr.com/">NCR</a> <br />
 									Marine Corps veteran, computer enthusiast, and fitness fanatic<br />
 									Check out my projects below!</p>
 								</header>
