--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
+							<li class="active"><a href="index.html">About Me</a></li>
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
