--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About Me</a></li>
-							<li class="active"><a href="index.html">Projects</a></li>
+							<a href=#news>Projects</a>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
