--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">About Me</a></li>
+							<li class="active"><a href="index.html/Projects">About Me</a></li>
+
 							<a href=#news>Projects</a>
 						</ul>
 						<ul class="icons">
