--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html/Projects">About Me</a></li>
-
-							<a href=#news>Projects</a>
+							<li class="active"><a href="#">About Me</a></li>
+							<li><a href=#>Projects</a></li>
+							<li><a href=#>Marathon Training</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
