--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/PCorrea1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.instagram.com/pablo.acc/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 					</nav>
 
@@ -150,8 +151,8 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/PCorrea1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									
+									<li><a href="https://github.com/PCorrea1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.instagram.com/pablo.acc/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 						</section>
