--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<div id="intro">
 						<h1>Pablo's Portfolio</h1>
 						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Feel free to
-							reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below. .</p>
+							reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -39,9 +39,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="#">About Me</a></li>
-							<li><a href=#>Projects</a></li>
-							<li><a href=#>Marathon Training</a></li>
+							<li class="active"><a href="#home">About Me</a></li>
+							<li><a data-toggle="tab" href=#projects>Projects</a></li>
+							<li><a data-toggle="tab" href=#marathon-training>Marathon Training</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
