--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="#home">About Me</a></li>
-							<li><a data-toggle="tab" href=#projects>Projects</a></li>
-							<li><a data-toggle="tab" href=#marathon-training>Marathon Training</a></li>
+							<li class="active"><a href="#">About Me</a></li>
+							<li><a data-toggle="tab" href=#Projects>Projects</a></li>
+							<li><a data-toggle="tab" href=#MarathonTraining>Marathon Training</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
