--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="#">About Me</a></li>
-							<li><a data-toggle="tab" href=#Projects>Projects</a></li>
+							<li><a data-toggle="tab" href="Projects.html">Projects</a></li>
 							<li><a data-toggle="tab" href=#MarathonTraining>Marathon Training</a></li>
 						</ul>
 						<ul class="icons">
