--- a/Projects.html
+++ b/Projects.html
@@ -39,9 +39,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a data-toggle="tab" href=/index.html>About Me</a></li>
-							<li class="active"><a data-toggle="tab" href=/Projects.html>Projects</a></li>
-							<li><a data-toggle="tab" href=/MarathonTraining>Marathon Training</a></li>
+							<li><a data-toggle="tab" href=/index.html#nav>About Me</a></li>
+							<li class="active"><a data-toggle="tab" href=/Projects.html#nav>Projects</a></li>
+							<li><a data-toggle="tab" href=/MarathonTraining#nav>Marathon Training</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
