--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active" id="nav-tabs"><a href=/index.html#nav-tabs>About Me</a></li>
-							<li><a data-toggle="tab" href=/Projects.html#nav-tabs>Projects</a></li>
+							<li class="active"><a href=/index.html#nav-tabs>About Me</a></li>
+							<li id="nav-tabs"><a data-toggle="tab" href=/Projects.html#nav-tabs>Projects</a></li>
 							<li><a data-toggle="tab" href=/MarathonTraining#nav-tabs>Marathon Training</a></li>
 						</ul>
 						<ul class="icons">
