--- a/Projects.html
+++ b/Projects.html
@@ -39,7 +39,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li id="nav-tabs"><a data-toggle="tab" href=/index.html#nav>About Me</a></li>
+							<li><a data-toggle="tab" href=/index.html#nav>About Me</a></li>
 							<li class="active"><a data-toggle="tab" href=/Projects.html#nav>Projects</a></li>
 							<li><a data-toggle="tab" href=/MarathonTraining#nav>Marathon Training</a></li>
 						</ul>
