--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<header class="major">
 									<span class="date">Pablo Correa</span>
 									<h2>About Me</a></h2>
-									<p>Homputer Science 4th year at the Georgia Institute of Technology<br />
+									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
 										Currently working for the Business Services Layer at <a href="https://www.ncr.com/">NCR</a> <br />
 									Marine Corps veteran, computer enthusiast, and fitness fanatic<br />
 									Check out my projects below!</p>
