--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/strava_api.js"></script>
 
 	</body>
 </html>
