update about me

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 
 				<!-- Main -->
 					<div id="main">
-
+						<div class="row">
+							<div class="column">
+								<img src="images/PresentationPic.PNG" alt="Presentation" style="width:100%">
+							</div>
+							<div class="column">
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
@@ -62,7 +66,12 @@
 									   Marine Corps veteran, computer enthusiast, and fitness fanatic<br />
 									Check out my projects below!</p>
 								</header>
-								
+							</div>
+							<div class="column">
+								<img src="images/ColombiaPic.PNG" alt="Colombia" style="width:100%">
+							</div>
+
+						</div>	
 					</div>
 
 				<!-- Footer -->
