update about me

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<span class="date">Pablo Correa</span>
 									<h2>About Me</a></h2>
 									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
-										Previously interned at NCR on the Transaction Document Management team for the Business Services Layer<br />
+										Recently interned at NCR on the Transaction Document Management team<br />
 									   Marine Corps veteran, computer enthusiast, and fitness fanatic<br />
 									Check out my projects below!</p>
 								</header>
