--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 									<h2>About Me</a></h2>
 									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
 										Recently interned at NCR on the Transaction Document Management team<br />
-									   Marine Corps veteran, computer enthusiast, and fitness fanatic<br />
-									Check out my projects below!</p>
+									   Software Engineer, Marine Corps veteran, and fitness enthusiast<br />
+									Check out some of my projects and my marathon training progress in the tabs above!</p>
 								</header>
 							</div>
 						</div>	
