update about me

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
 										Recently interned at NCR on the Transaction Document Management team<br />
 									   Software Engineer, Marine Corps veteran, and fitness enthusiast<br />
-									Check out some of my projects and my marathon training progress in the tabs above!</p>
+									   Check out some of my projects and my marathon training progress!</p>
 								</header>
 							</div>
 						</div>	
