update about me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div id="main">
 						<div class="row">
 							<div class="column">
-								<img src="images/PresentationPic.PNG" alt="Presentation" style="width:70%">
+								<img src="images/HawaiiPic.PNG" alt="Presentation" style="width:70%">
 							</div>
 							<div class="column">
 						<!-- Featured Post -->
