--- a/MarathonTraining.html
+++ b/MarathonTraining.html
@@ -52,7 +52,7 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main">
+					<div id="main"></div>
 
 						
 
@@ -80,7 +80,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Copyright Pablo Correa</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
