update about me pic

--- a/Projects.html
+++ b/Projects.html
@@ -75,15 +75,16 @@
 								<article>
 									<header>
 										<h2>Project Two<br />
-										Starbase Port </h2>
+										Escape the Labyrinth </h2>
 									</header>
-									<a class="image fit"><img src="images/spacePort.png" alt="" /></a>
-									<p>A GUI where a user has the ability to dock spaceships in a space port and evacuate the docks either
-										one at a time, or all at once. This project was also done using JavaFX and it incorporates my love
-										for both Star Wars and Star Trek.
+									<a class="image fit"><img src="images/dCrawl.png" alt="" /></a>
+									<p>A dungeon crawler style video game created using JavaFX. This project allows a player to select from different difficulties 
+										and gives the player the option of using a sword, knife, or a staff as a weapon. The player can collect new weapons, potions, and 
+										special items while navigating through the labyrinth and fighting the enemies that wait within. Data structures (arrays and linked lists) are 
+										used to randomize the paths that a player can take before they reach the final boss and escape the labyrinth.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/PCorrea1/StarbasePort" class="button">Take a look</a></li>
+										<li><a href="https://github.com/PCorrea1/DungeonCrawler" class="button">Take a look</a></li>
 									</ul>
 								</article>
 								<article>
