update about me pic

--- a/Projects.html
+++ b/Projects.html
@@ -56,8 +56,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-								<h2>Project One: Escape the Labyrinth</a></h2>
-								<a class="image main"><img src="images/dCrawl.png" alt="" /></a>
+								<h2>Project One: Internal Application tdm-insights</a></h2>
+								<a class="image main"><img src="images/MikeHPic.PNG" alt="" /></a>
 								<p>A dungeon crawler style video game created using JavaFX. This project allows a player to select from different difficulties 
 									and gives the player the option of using a sword, knife, or a staff as a weapon. The player can collect new weapons, potions, and 
 									special items while navigating through the labyrinth and fighting the enemies that wait within. Data structures (arrays and linked lists) are 
