update about me pic

--- a/Projects.html
+++ b/Projects.html
@@ -58,11 +58,14 @@
 								<header class="major">
 								<h2>Project One: Internal Application tdm-insights</a></h2>
 								<a class="image main"><img src="images/MikeHPic.PNG" alt="" /></a>
-								<p>A dungeon crawler style video game created using JavaFX. This project allows a player to select from different difficulties 
-									and gives the player the option of using a sword, knife, or a staff as a weapon. The player can collect new weapons, potions, and 
-									special items while navigating through the labyrinth and fighting the enemies that wait within. Data structures (arrays and linked lists) are 
-									used to randomize the paths that a player can take before they reach the final boss and escape the labyrinth.
-
+								<p>During an internship with NCR, my team and I built an application for the Business
+									Services Layer which visualizes different KPIs from information received from 
+									transaction logs that are generated whenever a transaction occurs on NCR's Points Of Sale.
+									Since this projects had three shipments to production, real world data was able to be gathered from organizations
+									like Wendy's, KFC, and Circle K to name a few. With this data, the application is able to display key metrics
+									such as total number of transactions, total dollar amount of those transactions, top items sold, and many others. 
+									This data can also be filtered in order to be viewed for a specific organization or a specific point of sale.
+									Pictured above is my team (Pranay Rapolu and Max Ratmeyer) and I with NCR's CEO Mike Hayford after a presentation of our application.
 								</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/PCorrea1/DungeonCrawler" class="button">Take a look</a></li>
