update about me pic

--- a/Projects.html
+++ b/Projects.html
@@ -56,7 +56,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-								<h2>Project One: tdm-insights</a></h2>
+								<h2>Project One:<br />tdm-insights</a></h2>
 								<a class="image main"><img src="images/MikeHPic.PNG" alt="" /></a>
 								<p>During an internship with NCR, my team and I built an application for the Business
 									Services Layer which visualizes different KPIs from information received from 
@@ -67,10 +67,6 @@
 									This data can also be filtered in order to be viewed for a specific organization or a specific point of sale.
 									Pictured above is my team (Pranay Rapolu and Max Ratmeyer) and I with NCR's CEO Mike Hayford after a presentation of our application.
 								</p>
-								<ul class="actions special">
-									<li><a href="https://www.instagram.com/p/Cg48UDoOV4w/" class="button">Take a look</a></li>
-									
-								</ul>
 							</article>
 
 						<!-- Posts -->
