update projects page

--- a/Projects.html
+++ b/Projects.html
@@ -58,15 +58,19 @@
 								<header class="major">
 								<h2>Project One:<br />tdm-insights</a></h2>
 								<a class="image main"><img src="images/MikeHPic.PNG" alt="" /></a>
-								<p>During an internship with NCR, my team and I built an application for the Business
+								<p>During an internship with NCR, my team and I built an dashboard for the Business
 									Services Layer which visualizes different KPIs from information received from 
 									transaction logs that are generated whenever a transaction occurs on NCR's Points Of Sale.
 									Since this projects had three shipments to production, real world data was able to be gathered from organizations
 									like Wendy's, KFC, and Circle K to name a few. With this data, the application is able to display key metrics
 									such as total number of transactions, total dollar amount of those transactions, top items sold, and many others. 
 									This data can also be filtered in order to be viewed for a specific organization or a specific point of sale.
+									Tools used to build this application were Google Cloud Platform's Pub/Sub, Cloud Functions, BigQuery, and Google's Data Studio.
 									Pictured above is my team (Pranay Rapolu and Max Ratmeyer) and I with NCR's CEO Mike Hayford after a presentation of our application.
 								</p>
+								<ul class="actions special">
+									<li><a href="https://www.linkedin.com/posts/pablo-correa-67b4601b6_ncr-googlecloud-activity-6961091078590541824-RIwP?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button">Take a look (linkedin)</a></li>
+								</ul>
 							</article>
 
 						<!-- Posts -->
@@ -83,7 +87,7 @@
 										used to randomize the paths that a player can take before they reach the final boss and escape the labyrinth.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/PCorrea1/DungeonCrawler" class="button">Take a look</a></li>
+										<li><a href="https://github.com/PCorrea1/DungeonCrawler" class="button">Take a look at the code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -96,7 +100,7 @@
 										then goes on to determine whether the student has sufficient funds to purchase a meal from the dining hall.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/PCorrea1/SomeCoolStuf/tree/main/Buzzfunds" class="button">Take a look</a></li>
+										<li><a href="https://github.com/PCorrea1/SomeCoolStuf/tree/main/Buzzfunds" class="button">Take a look at the code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -109,7 +113,7 @@
 										This project was done with Java and it was a stepping stone to learning the LC-3 assembly language and then
 										going on to learn C.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/PCorrea1/SomeCoolStuf/tree/main/BitManipulation" class="button">Take a look</a></li>
+										<li><a href="https://github.com/PCorrea1/SomeCoolStuf/tree/main/BitManipulation" class="button">Take a look at the code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -123,7 +127,7 @@
 										that is stored inside of it. 
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/PCorrea1/SomeCoolStuf/tree/main/DynamicMemory" class="button">Take a look</a></li>
+										<li><a href="https://github.com/PCorrea1/SomeCoolStuf/tree/main/DynamicMemory" class="button">Take a look at the code</a></li>
 									</ul>
 								</article>
 								
