update projects page

--- a/MarathonTraining.html
+++ b/MarathonTraining.html
@@ -52,7 +52,9 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main"></div>
+					<div id="main">
+						<h1>Page under construction, coming soon!!!</h1>
+					</div>
 
 						
 
