--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
 					<div id="intro">
 						<h1>Pablo's Portfolio</h1>
 						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Some projects do not have the 
-							code linked due to being company property. Feel free to reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below.</p>
+							code linked due to being company property. Feel free to reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below.
+							
+						</p>
+						<h2>Toggle Dark/Light Mode</h2>
+<p>Click the button to toggle between dark and light mode for this page.</p>
+
+<button onclick="myFunction()">Toggle dark mode</button>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
