--- a/MarathonTraining.html
+++ b/MarathonTraining.html
@@ -52,7 +52,7 @@
 					</nav>
 
 				<!-- Main -->
-				<div id="main" align="center">
+				<div id="main">
 
 					<article class="post featured">
 						<header class="major">
