--- a/Projects.html
+++ b/Projects.html
@@ -57,6 +57,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
+									<span class="date">Some of My Projects</span>
 								<h2>Project One:<br />tdm-insights</a></h2>
 								<a class="image main"><img src="images/MikeHPic.PNG" alt="" /></a>
 								<p>During an internship with NCR, my team and I built an dashboard for the Business
