--- a/Projects.html
+++ b/Projects.html
@@ -151,6 +151,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/pablo-correa-67b4601b6/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/PCorrea1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.strava.com/athletes/105768818" class="icon brands fa-strava"><span class="label">Strava</span></a></li>
 									<li><a href="https://www.instagram.com/pablo.acc/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
