--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Pablo's Portfolio</h1>
+						<h1>Pablo A. Correa</h1>
 						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Some projects do not have the 
 							code linked due to being company property. Feel free to reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below.
 							
