--- a/Projects.html
+++ b/Projects.html
@@ -23,9 +23,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Pablo's Portfolio</h1>
-						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Feel free to
-							reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below.</p>
+						<h1>Pablo A. Correa</h1>
+						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Some projects do not have the 
+							code linked due to being company property. Feel free to reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -56,7 +56,7 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header class="major">
+								<header>
 									<span class="date">Some of My Projects</span>
 								<h2>Project One:<br />tdm-insights</a></h2>
 								<a class="image main"><img src="images/MikeHPic.PNG" alt="" /></a>
