--- a/Projects.html
+++ b/Projects.html
@@ -56,7 +56,7 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header>
+								<header class ="major">
 									<span class="date">Some of My Projects</span>
 								<h2>Project One:<br />tdm-insights</a></h2>
 								<a class="image main"><img src="images/MikeHPic.PNG" alt="" /></a>
