--- a/MarathonTraining.html
+++ b/MarathonTraining.html
@@ -26,7 +26,8 @@
 					<div id="intro">
 						<h1>Pablo A. Correa</h1>
 						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Some projects do not have the 
-							code linked due to being company property.Feel free to reach out to me on linkedin, GitHub, or email me directly. All contact info can be found below.</p>
+							code linked due to being company property.Feel free to reach out to me on linkedin, GitHub, or email me directly. Also, message me 
+							on Strava if you'd like to follow my marathon training progress. All contact info can be found below.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
