--- a/Projects.html
+++ b/Projects.html
@@ -161,7 +161,9 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Copyright Pablo Correa</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Copyright Pablo Correa</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							<li><a href="https://github.com/PCorrea1/pablocorreajr.com">Code for Pablo's Website</a></li>
+						</ul>
 					</div>
 
 			</div>
