--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 								<header class="major">
 									<span class="date">Pablo Correa</span>
 									<h2>About Me</a></h2>
-									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
-										Recently interned at NCR on the Transaction Document Management team<br />
-									   Software Engineer, Marine Corps veteran, and fitness enthusiast<br />
-									   Check out some of my projects and my marathon training progress!</p>
+									<p>I am a Computer Science 4th year at the Georgia Institute of Technology.<br />
+									   The Summer of 2022, I interned at NCR on the Transaction Document Management team.<br />
+									   A Software Engineer, Marine Corps veteran, and fitness enthusiast<br />
+									   Feel free to check out some of my projects and my marathon training progress!<br />
+									   Welcome to my site! <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/>
+									</p>
 								</header>
 							</div>
 						</div>	
