--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Pablo A. Correa</h1>
-						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description. Some projects do not have the 
-							code linked due to being company property. Feel free to reach out to me on linkedin, GitHub, or email me directly. Also, message me 
-							on Strava if you'd like to follow my marathon training progress. All contact info can be found below.
+						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description.<br /> 
+							Some projects do not have the code linked due to being company property. Feel free to reach out to me on linkedin, GitHub, or email me directly. <br />
+							Also, message me on Strava if you'd like to follow my marathon training progress. All contact info can be found below.
 							</p>
 					</div>
 
