--- a/MarathonTraining.html
+++ b/MarathonTraining.html
@@ -59,6 +59,7 @@
 						<header class="major">
 							<span class="date">Strava Runs</span>
 						<center><iframe height='700' width='1200' frameborder='0' allowtransparency='false' scrolling='yes' src='https://www.strava.com/athletes/105768818/latest-rides/b774c5245bbce4b1e2f7b7bdac6650e784898b8f'></iframe>
+							<span class="date">Races Completed</span>
 							<img src="images/Area13.1.png" width="200" height="400" alt="" />
 						</center>
 					</header>
