--- a/MarathonTraining.html
+++ b/MarathonTraining.html
@@ -59,9 +59,10 @@
 						<header class="major">
 							<span class="date">Strava Runs</span>
 						<center><iframe height='700' width='1200' frameborder='0' allowtransparency='false' scrolling='yes' src='https://www.strava.com/athletes/105768818/latest-rides/b774c5245bbce4b1e2f7b7bdac6650e784898b8f'></iframe>
+							<a style="display:inline-block;background-color:#FC5200;color:#fff;padding:5px 10px 5px 30px;font-size:11px;font-family:Helvetica, Arial, sans-serif;white-space:nowrap;text-decoration:none;background-repeat:no-repeat;background-position:10px center;border-radius:3px;background-image:url('https://badges.strava.com/logo-strava-echelon.png')" href='https://strava.com/athletes/105768818' target="_clean">
+								Follow me on
+								<img src='https://badges.strava.com/logo-strava.png' alt='Strava' style='margin-left:2px;vertical-align:text-bottom' height=13 width=51 />
 						</center>
-						<h1>Races Completed</h1>
-						<img src="images/Area13.1.png" width="200" height="400" alt="" />
 					</header>
 				</div>	
 
