--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 								<header class="major">
 									<span class="date">Pablo Correa</span>
 									<h2>About Me</a></h2>
-									<p>I am a Computer Science 4th year at the Georgia Institute of Technology.<br />
-									   Recent intern at NCR on the Transaction Document Management team.<br />
-									   A Software Engineer, Marine Corps veteran, and fitness enthusiast.<br />
+									<p>I am a Computer Science 4th year at the Georgia Institute of Technology<br />
+									   Recent intern at NCR on the Transaction Document Management team<br />
+									   A Software Engineer, Marine Corps veteran, and fitness enthusiast<br />
 									   Feel free to check out some of my projects and my marathon training progress!<br />
 									   Welcome to my site! <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/>
 									</p>
