--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<header class="major">
 									<span class="date">Pablo Correa</span>
 									<h2>About Me</a></h2>
-									<p>I am a Computer Science 4th year at the Georgia Institute of Technology<br />
+									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
 									   Recent intern at NCR on the Transaction Document Management team<br/>
 									   A Software Engineer, Marine Corps veteran, and fitness enthusiast<br/>
 									   Check out some of my projects and my marathon training progress!<br/>
