--- a/Projects.html
+++ b/Projects.html
@@ -15,8 +15,7 @@
 		<link rel="manifest" href="images/Favicon/site.webmanifest">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<!-- Google tag (gtag.js) -->
+		<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QLB6ZJ953E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -25,6 +24,9 @@
 
   gtag('config', 'G-QLB6ZJ953E');
 </script>
+	</head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QLB6ZJ953E"></script>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
