fix placement of snippet

--- a/MarathonTraining.html
+++ b/MarathonTraining.html
@@ -14,7 +14,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-QLB6ZJ953E');
+  gtag('config', 'G-DCK3E078H2');
 </script>
 		<title>Pablo Correa</title>
 		<meta charset="utf-8" />
