--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">pcorrea6@gatech.edu</a></p>
+								<p><a href="#">pcorreausmc@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -93,8 +93,8 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Copyright Pablo Correa</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							<li><a href="https://github.com/PCorrea1/pablocorreajr.com">Code for Pablo's Website</a></li>
+						<ul><li>&copy; Copyright Pablo Correa</li>
+							<li><a href="https://github.com/PCorrea1/pablocorreajr.com">Code for my website</a></li>
 						</ul>
 					</div>
 
