update bio and about me

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 
@@ -28,7 +23,7 @@
 						<p>Welcome to my website! Here you will find some of my open source projects with the code linked underneath each description.<br /> 
 							Some projects do not have the code linked due to being company property. <br />
 							Feel free to reach out to me on linkedin, GitHub, or email me directly. <br />
-							Also, message me on Strava if you'd like to follow my marathon training progress. All contact info can be found below.
+							Also, message me on Strava if you'd like to follow my iron man training progress. All contact info can be found below.
 							</p>
 					</div>
 
@@ -61,10 +56,8 @@
 								<header class="major">
 									<span class="date">Pablo Correa</span>
 									<h2>About Me</a></h2>
-									<p>Computer Science 4th year at the Georgia Institute of Technology<br />
-									   Recent intern at NCR on the Transaction Document Management team<br/>
-									   A Software Engineer, Marine Corps veteran, and fitness enthusiast<br/>
-									   Check out some of my projects and my marathon training progress!<br/>
+									<p>Software Engineer in the fintech industry, Marine Corps veteran, and fitness enthusiast<br/>
+									   Check out some of my projects and my ironman training progress!<br/>
 									   Welcome to my site! <img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="30px"/>
 									</p>
 								</header>
